--- a/scss/_fontsize.scss
+++ b/scss/_fontsize.scss
@@ -38,5 +38,17 @@ $font-size-contacto-contactform-input: 1.5rem;
 $font-size-contacto-contactform-textarea: 1.5rem;
 $font-size-contacto-contactform-button: 1.6rem;
 
+/** RESERVAS **/
+$font-size-reservas-contactinfo-h5: 1.8rem;
+$font-size-reservas-contactform-input: 1.5rem;
+$font-size-reservas-contactform-textarea: 1.5rem;
+$font-size-reservas-contactform-button: 1.6rem;
+
 /** WHATSAPP **/
 $font-size-whatsappbutton-fawhatsapp: 4rem;
+
+/** SERVICIOS **/
+$font-size-servicios-contactform-textarea: 1.5rem;
+
+/** NOSOTROS **/
+$font-size-nosotros-contactform-textarea: 1.5rem;
