--- a/scss/_main_infobar.scss
+++ b/scss/_main_infobar.scss
@@ -3,7 +3,7 @@
 /** Info Bar **/
 
 #info_bar {
-	background-color: $bg-color-infobar;
+	background-image: $bg-color-infobar;
 	border-bottom: 1px solid $border-color-infobar-bottom;
 	box-shadow: 0 0 10px 0 $boxshadow-infobar-color;
 	margin-top: -5.6px;
