--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,31 +1,32 @@
 /** Global **/
-$bg-color-body: #ffffff;
-$bg-color-scrollbar: #000000;
-$bg-color-scrollbar-thumb: #6b6b6b;
+$bg-color-body: black;
+$bg-color-scrollbar: blueviolet;
+$bg-color-scrollbar-thumb: blueviolet;
 
 
 /** Loader **/
-$border-color-loader1: #00296B;
-$border-color-loader2: #00509D;
+$border-color-loader1: blueviolet;
+$border-color-loader2: white;
 $border-color-loader3: #FFD500;
 
 /** Footer **/
 $bg-color-footer: #000000;
-$bg-color-footer-footerop: #1b1b1b;
-$bg-color-footer-footerop-h5-after: #ffd500;
+$bg-color-footer-footerop: #000000;
+$bg-color-footer-footerop-h5-after: blueviolet;
 $bg-color-footertop-footernewsletter-form: #ffffff;
-$bg-color-footertop-footernewsletter-form-input: #ffd500;
-$bg-color-footertop-footernewsletter-form-input-hover: #ffd500;
+$bg-color-footertop-footernewsletter-form-input: blueviolet;
+$bg-color-footertop-footernewsletter-form-input-hover: white;
 $bg-color-footertop-sociallinks-a: #2b2b2b;
-$bg-color-footertop-sociallinks-a-hover: #00509d;
-$font-color-footer: #ffffff;
+$bg-color-footertop-sociallinks-a-hover: blueviolet;
+$font-color-footer: blueviolet;
 $font-color-footertop-footercontact-panda: #ffffff;
-$font-color-footertop-footercontact-footerlinks-chevron: #ffffff;
+$font-color-footertop-footercontact-footerlinks-chevron: blueviolet;
 $font-color-footertop-footercontact-footerlinks-a: #ffffff;
-$font-color-footertop-footercontact-footerlinks-a-hover: #ffd500;
-$font-color-footertop-footernewsletter-form-input: #000000;
+$font-color-footertop-footercontact-footerlinks-a-hover: blueviolet;
+$font-color-footertop-footernewsletter-form-input: black;
 $font-color-footertop-sociallinks-a:#ffffff;
 $font-color-footertop-sociallinks-a-hover: #ffffff;
+$font-color-footertop-footernewsletterp: white;
 
 
 /** Header **/
@@ -35,33 +36,48 @@ $bg-color-navbar-menuiconbar:#ffffff;
 $bg-color-navbar-fixedtop: #000000;
 $bg-color-navbarnav-767:#000000e6;
 $bg-color-navbarnav-fixedtop-767:#000000;
-$bg-color-navbarnav-navlink-after:#fdc500; 
+$bg-color-navbarnav-navlink-after:blueviolet; 
 $font-color-navbardark-navlink:#ffffff;
 $font-color-navbardark-navlink-hover: #ffffff;
-$font-color-navbardark-navlink-active:#ffd500;
-$font-color-fixedtop-navbardark-navlink-active:#ffd500;
-$font-color-fixedtop-navbardark-navlink-after:#fdc500;
+$font-color-navbardark-navlink-active:blueviolet;
+$font-color-fixedtop-navbardark-navlink-active:blueviolet;
+$font-color-fixedtop-navbardark-navlink-after:blueviolet;
 
 /** Banners **/
 $bg-color-hovebanner: #EAEAEA;
 $bg-color-hovebanner-bigandsmall: #FFFFFF;
 $font-color-hoverbanner-bigandsmall-a: #000000;
 $font-color-bannerservice-h1andh3: #ffffff;
-$font-color-bannertop-h1: #ffffff;
+$font-color-bannertop-h1:rgb(50, 0, 97);
 $boxshadow-hoverbanner-bigandsmall: #000000;
 $boxshadow-hoverbanner-bigandsmall-hover: #000000;
 $textshadow-bannerservice-h1andh3:#282828;
-$boxshadow-bannertop: #000000;
+$boxshadow-bannertop: white;
 $boxshadow-bannertop-h1: #282828;
 
 /** Contacto **/
 $font-color-contacto-contactform-input: #b7b7b7;
 $font-color-contacto-contactform-input-placeholder: #b7b7b7;
-$font-color-contacto-contactform-textarea:#b7b7b7;
+$font-color-contacto-contactform-textarea: blueviolet;
 $font-color-contacto-contactform-textarea-placeholder:#b7b7b7;
-$border-color-contacto-contactinfo-h4: #808080;
-$border-color-contacto-contactform-input: #e1e1e1;
-$border-color-contacto-contactform-textarea: #e1e1e1;
+$font-color-contacto-contactinfoh5-input: blueviolet;
+$font-color-contacto-contactinfop-input: white;
+$font-color-contacto-contactinfoh4-input: blueviolet;       
+$border-color-contacto-contactinfo-h4: blueviolet;
+$border-color-contacto-contactform-input:blueviolet;
+$border-color-contacto-contactform-textarea: blueviolet;
+
+/** Reservas **/
+$font-color-reservas-contactform-input: #b7b7b7;
+$font-color-reservas-contactform-input-placeholder: #b7b7b7;
+$font-color-reservas-contactform-textarea: blueviolet;
+$font-color-reservas-contactform-textarea-placeholder:#b7b7b7;
+$font-color-reservas-contactinfoh5-input: blueviolet;
+$font-color-reservas-contactinfop-input: white;
+$font-color-reservas-contactinfoh4-input: blueviolet;       
+$border-color-reservas-contactinfo-h4: blueviolet;
+$border-color-reservas-contactform-input:blueviolet;
+$border-color-reservas-contactform-textarea: blueviolet;
 
 /** Whatsapp **/
 $bg-color-whatsappbutton: #25d366;
@@ -69,18 +85,26 @@ $font-color-whatsappbutton-fawhatsapp: #ffffff;
 $box-shadow-whatsappbutton: #000000;
 
 /** Info Bar **/
-$bg-color-infobar: #003f88;
+$bg-color-infobar:linear-gradient(to right, black, rgb(155, 132, 238));
 $font-color-infobar-infotxt: #ffffff;
 $border-color-infobar-bottom: #000000;
-$border-color-infobar-div-right:  #000000;
+$border-color-infobar-div-right: white;
 $border-color-infobar-div-path: #ffffff;
-$boxshadow-infobar-color: #000000;
+$boxshadow-infobar-color: white;
 
 /** Carousels **/
-$font-color-itemcarousel-h5: #000000;
+$font-color-itemcarousel-h5: blueviolet;
 $font-color-itemcarousel-a: #000000;
 $font-color-itemcarousel-cardprice:#3E7CB1;
-$font-color-brandcarousel-h5: #000000;
+$font-color-brandcarousel-h5: blueviolet;
 $border-color-itemcarousel-h5-bottom: #c1c1c1;
-$border-color-brandcarousel-h5-bottom:#c1c1c1;
+$border-color-brandcarousel-h5-bottom: blueviolet;
 $boxshadow-itemcarousel-card-hover-color: #0000004d;
+
+/** Servicios **/
+$font-color-servicios-contactform-textarea: blueviolet;
+$font-color-servicios-contactform-p: white;
+
+/** Nosotros **/
+$font-color-nosotros-contactform-textarea: blueviolet;
+$font-color-nosotros-contactform-p: white;
