--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -9,5 +9,7 @@
 @import 'main_banners';
 @import 'main_contacto';
 @import 'main_reservas';
+@import 'main_nosotros';
+@import 'main_servicios';
 @import 'footer';
 @import 'whatsapp_button';
