--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -38,7 +38,7 @@ $bg-color-navbarnav-767:#000000e6;
 $bg-color-navbarnav-fixedtop-767:#000000;
 $bg-color-navbarnav-navlink-after:blueviolet; 
 $font-color-navbardark-navlink:#ffffff;
-$font-color-navbardark-navlink-hover: #ffffff;
+$font-color-navbardark-navlink-hover:blueviolet;
 $font-color-navbardark-navlink-active:blueviolet;
 $font-color-fixedtop-navbardark-navlink-active:blueviolet;
 $font-color-fixedtop-navbardark-navlink-after:blueviolet;
