--- a/scss/_main_slider&video.scss
+++ b/scss/_main_slider&video.scss
@@ -18,9 +18,10 @@
 	padding:0;
 }
 
-#gifvideo {
+.gifvideo {
+	padding: 50px;
 	position: relative;
-	object-fit:cover;
+	object-fit: cover;
 	left: 0px;
 	width: 100%;
 
