--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ body::-webkit-scrollbar-thumb {
     font-weight: 500;
     text-transform: uppercase; }
     .navbar.navbar-dark .navbar-nav .nav-link:focus, .navbar.navbar-dark .navbar-nav .nav-link:hover {
-      color: #ffffff; }
+      color: blueviolet; }
     .navbar.navbar-dark .navbar-nav .nav-link.active {
       color: blueviolet;
       font-weight: 600; }
@@ -221,7 +221,8 @@ body::-webkit-scrollbar-thumb {
 #main-slider {
   padding: 0; }
 
-#gifvideo {
+.gifvideo {
+  padding: 50px;
   position: relative;
   object-fit: cover;
   left: 0px;
@@ -262,7 +263,7 @@ body::-webkit-scrollbar-thumb {
     text-transform: uppercase;
     width: 100%; }
   #brand-carousel .item-container {
-    height: 110px;
+    height: 200px;
     margin: 15px; }
   #brand-carousel .slider-image {
     height: auto;
@@ -499,11 +500,13 @@ body::-webkit-scrollbar-thumb {
 /** MAIN **/
 /** Nosotros **/
 #equipo,
+#colecciones,
 #labarberia {
   padding: 30px 0;
   font-size: 1.5rem;
   color: blueviolet; }
   #equipo p,
+  #colecciones p,
   #labarberia p {
     color: white; }
 
