--- a/scss/_main_nosotros.scss
+++ b/scss/_main_nosotros.scss
@@ -3,6 +3,7 @@
 /** Nosotros **/
 
 #equipo,
+#colecciones,
 #labarberia {
     padding: 30px 0;
     font-size: $font-size-nosotros-contactform-textarea;
