--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
 /** Global **/
 $bg-color-body: black;
-$bg-color-scrollbar: blueviolet;
+$bg-color-scrollbar: black;
 $bg-color-scrollbar-thumb: blueviolet;
 
 
