--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ p {
 body::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  background-color: blueviolet; }
+  background-color: black; }
 
 body::-webkit-scrollbar-thumb {
   background: blueviolet; }
